Change comics amount constant and fix styles

--- a/app/assets/stylesheets/comic/comics.scss
+++ b/app/assets/stylesheets/comic/comics.scss
@@ -7,38 +7,60 @@
     margin-left: auto;
     margin-right: auto;
 }
-
 body { 
     margin: 0; 
     background-color: #2b2b2b;
     color: white;
 }
-.row, .col { overflow: hidden; position: absolute; }
-.row { left: 0; right: 0; }
-.col { top: 0; bottom: 0; }
-.scroll-x { overflow-x: auto; }
-.scroll-y { overflow-y: auto; }
-
-.header.row { height: 75px; top: 0; }
-.body.row { top: 75px; bottom: 50px; }
-.footer.row { height: 50px; bottom: 0; }
-
+.row, .col { 
+    overflow: hidden; 
+    position: absolute; 
+}
+.row { 
+    left: 0; 
+    right: 0; 
+}
+.col { 
+    top: 0; 
+    bottom: 0; 
+}
+.scroll-x { 
+    overflow-x: auto; 
+}
+.scroll-y { 
+    overflow-y: auto; 
+}
+.header.row { 
+    height: 75px; 
+    top: 0; 
+}
+.body.row { 
+    top: 75px; 
+    bottom: 50px; 
+}
+.footer.row { 
+    height: 50px; 
+    bottom: 0; 
+}
 .butt {
     border: 1px outset white;
     background-color: white;
     color: rgba(217,35,36,255);
+    padding: 10px;
     cursor:pointer;
  }
-
-.left-button { float: left; }
-.right-button { float: right; }
-
+.left-button { 
+    float: left; 
+}
+.right-button { 
+    float: right; 
+}
 .container {
     margin: 0 auto;
     max-width: 90rem;
     width: 90%;
 }
-  
 .comics-header-container {
     background: rgba(217,35,36,0.9);
+    padding-top: 15px; 
 }
