--- a/app/views/comic/comics/index.html.erb
+++ b/app/views/comic/comics/index.html.erb
@@ -1,5 +1,6 @@
 <div class="comics-header-container header row">
     <%= image_tag("marvel_logo.png", :alt => "Marvel Logo", :class => "center image") %>
+    <input type="text" placeholder="search" id="comic-search" class="center comic-input"><br><br>
 </div>
 
 <div class="body row scroll-y container grid-container">
