--- a/app/assets/stylesheets/comic/comics.scss
+++ b/app/assets/stylesheets/comic/comics.scss
@@ -2,91 +2,28 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-body { 
-    margin: 0; 
-    background-color: #2b2b2b;
-    color: white;
-}
-.row, .col { 
-    overflow: hidden; 
-    position: absolute; 
-}
-.row { 
-    left: 0; 
-    right: 0; 
-}
-.col { 
-    top: 0; 
-    bottom: 0; 
-}
-.scroll-x { 
-    overflow-x: auto; 
-}
-.scroll-y { 
-    overflow-y: auto; 
-}
-.header.row { 
-    height: 120px; 
-    top: 0; 
-}
-.body.row {
-    top: 0px;
-    bottom: 100px;
-    padding-top: 120px;
-}
-.footer.row { 
-    height: 50px; 
-    bottom: 0; 
-}
-.button {
-    border: 1px outset white;
-    background-color: white;
-    color: rgba(217,35,36,255);
-    padding: 10px;
-    font-weight: bold;
-    cursor:pointer;
- }
-.left-button { 
-    float: left; 
-}
-.right-button { 
-    float: right; 
-}
-.container {
-    margin: 0 auto;
-    max-width: 60rem;
-    width: 90%;
-}
 .comics-header-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: var(--header-height);
     background: rgba(217,35,36,0.9);
     z-index: 10;
-    justify-content: center;
 }
-.image {
-    padding-top: 15px;
-}
-.grid-container {
-    display: grid;
-    grid-template-columns: 180px 180px 180px 180px 180px;
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
 
+.comics-table {
+  position: relative;
+  margin-top: var(--header-height);
 }
-.grid-item {
-    font-size: 30px;
-    text-align: center;
+
+.footer {
+  padding: 20px;
 }
-input:disabled,
-input[disabled]{
-  border: 1px solid #999999;
-  background-color: #cccccc;
-  color: #666666;
-}
+
 .comic-input {
     margin-top: 5px;
     line-height: 1.8em;
