Fix image size bug

--- a/app/assets/stylesheets/comic/comics.scss
+++ b/app/assets/stylesheets/comic/comics.scss
@@ -20,6 +20,11 @@
   margin-top: var(--header-height);
 }
 
+.comic-image {
+  width: 168px;
+  text-align: center;
+}
+
 .footer {
   padding: 20px;
 }
