--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -83,6 +83,7 @@ input[disabled]{
   height: 100vh;
   width: 100%;
   background-color: rgba(255, 255, 255, .8);
+  z-index: 10;
 }
 .load .line:nth-last-child(1) {
   animation: loadingKeyframes 0.6s 0.1s linear infinite;
