--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,7 @@ body {
     background-color: #2b2b2b;
     color: white;
     --header-height: 120px;
+    --marvel-red: #D92324;
 }
 
 input:disabled,
@@ -30,7 +31,7 @@ input[disabled]{
 .button {
     border: 1px outset white;
     background-color: white;
-    color: rgba(217,35,36,255);
+    color: var(--marvel-red);
     padding: 10px;
     font-weight: bold;
     cursor:pointer;
@@ -75,7 +76,7 @@ input[disabled]{
   width: 15px;
   height: 15px;
   border-radius: 15px;
-  background-color: rgb(217, 35, 36);
+  background-color: var(--marvel-red);
 }
 
 .load-wrapper {
