--- a/app/assets/stylesheets/comic/comics.scss
+++ b/app/assets/stylesheets/comic/comics.scss
@@ -27,7 +27,7 @@
   cursor: pointer;
 
   &.upvoted  {
-    outline: solid 2px red;
+    outline: solid 3px var(--marvel-red);
     .upvote-heart {
       display: block;
       background: no-repeat center url("/assets/heart_on.png");      
@@ -56,7 +56,7 @@
   color: white;
   top: 5px;
   right: 5px;
-  z-index: 10;
+  z-index: 9;
   height: 30px;
   width: 30px;
   background: no-repeat center url("/assets/heart_off.png");
