--- a/app/assets/stylesheets/comic/comics.scss
+++ b/app/assets/stylesheets/comic/comics.scss
@@ -26,7 +26,7 @@
   text-align: center;
   cursor: pointer;
 
-  &.upvoted  {
+  &[data-upvoted="true"] {
     outline: solid 3px var(--marvel-red);
     .upvote-heart {
       display: block;
