--- a/app/views/comic/comics/index.html.erb
+++ b/app/views/comic/comics/index.html.erb
@@ -16,9 +16,9 @@
     </div>
     <div class="container flex gap-10 justify-center wrap justify-center">
       <% @comics.each do |comic| %>
-          <div class="comic-image <%= "upvoted" if comic.checked %>" data-comic-id=<%= comic.id %>>
+          <div class="comic-image" data-upvoted=<%= comic.checked %> data-comic-id=<%= comic.id %>>
             <%= image_tag(comic.image, :class => "comic-image-tag") %>
-            <div class="upvote-heart">
+            <div class="upvote-heart" id=<%= comic.id %>>
             </div>
           </div>
       <% end %>
